Fixed carousel caption clipping with img on wider screens

--- a/StaticFiles/CSS/PageCSS/product-style.css
+++ b/StaticFiles/CSS/PageCSS/product-style.css
@@ -238,6 +238,7 @@
 }
 
 .carousel-caption {
+    transform: translateY(20px);
 }
 
 .carousel-control-prev-icon, .carousel-control-next-icon {
